{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 37,
  "lineage": "2f2bd005-51c7-8f09-208c-6e8333ce27e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005de95e8ff495156",
            "arn": "arn:aws:ec2:us-east-1:533658575490:instance/i-0f71767409c4bf17d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f71767409c4bf17d",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db0bcf89cdb9af6a",
            "private_dns": "ip-172-31-28-96.ec2.internal",
            "private_ip": "172.31.28.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ce1235700c16a735",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7277077c5aa9025",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cff038a2d4bbea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005de95e8ff495156",
            "arn": "arn:aws:ec2:us-east-1:533658575490:instance/i-0e0d7da11cd5c8555",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0d7da11cd5c8555",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5e262da942a7da0",
            "private_dns": "ip-172-31-26-166.ec2.internal",
            "private_ip": "172.31.26.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042f327081a83aa79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7277077c5aa9025",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cff038a2d4bbea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005de95e8ff495156",
            "arn": "arn:aws:ec2:us-east-1:533658575490:instance/i-09397ff90b2f46ef2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09397ff90b2f46ef2",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0322c958ddf4722a5",
            "private_dns": "ip-172-31-21-248.ec2.internal",
            "private_ip": "172.31.21.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0927da0bc0d8f359f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7277077c5aa9025",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cff038a2d4bbea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005de95e8ff495156",
            "arn": "arn:aws:ec2:us-east-1:533658575490:instance/i-08faa4521b2f6278e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08faa4521b2f6278e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044b766891fe1b76c",
            "private_dns": "ip-172-31-26-35.ec2.internal",
            "private_ip": "172.31.26.35",
            "public_dns": "ec2-34-234-70-93.compute-1.amazonaws.com",
            "public_ip": "34.234.70.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c0b21d7572197579",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7277077c5aa9025",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cff038a2d4bbea"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005de95e8ff495156",
            "arn": "arn:aws:ec2:us-east-1:533658575490:instance/i-008b1c82a314a8374",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008b1c82a314a8374",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5200f428136626f",
            "private_dns": "ip-172-31-27-157.ec2.internal",
            "private_ip": "172.31.27.157",
            "public_dns": "ec2-54-157-248-204.compute-1.amazonaws.com",
            "public_ip": "54.157.248.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fbec7814dbb4decd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7277077c5aa9025",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cff038a2d4bbea"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa49cc9dc8d62c84",
            "arn": "arn:aws:ec2:us-east-2:533658575490:instance/i-07e587c02ab1e4320",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e587c02ab1e4320",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2421064f7ff66cd",
            "private_dns": "ip-172-31-41-172.us-east-2.compute.internal",
            "private_ip": "172.31.41.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066837b61e9ccfb60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06558ede4b137ca67",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09eda446d1aa5152e"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa49cc9dc8d62c84",
            "arn": "arn:aws:ec2:us-east-2:533658575490:instance/i-01eee6d76fbaeed76",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eee6d76fbaeed76",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0186656d24f253661",
            "private_dns": "ip-172-31-13-169.us-east-2.compute.internal",
            "private_ip": "172.31.13.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b756782c9c13af82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh-us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ce8dc9921090c71",
            "tags": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09eda446d1aa5152e"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533658575490:security-group/sg-042cff038a2d4bbea",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-042cff038a2d4bbea",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.251.119.174/32",
                  "179.251.119.174/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "533658575490",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ca69effc1e7465a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533658575490:security-group/sg-09eda446d1aa5152e",
            "description": "acesso-ssh-us-east-2",
            "egress": [],
            "id": "sg-09eda446d1aa5152e",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.251.119.174/32",
                  "179.251.119.174/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-us-east-2",
            "name_prefix": null,
            "owner_id": "533658575490",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83bfb9958fa0154"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}